<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ActivityAbout"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/miActionBar"
        layout="@layout/actionbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>
    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_detalle"
        android:textSize="@dimen/app_titulo"
        android:textStyle="bold"
        android:focusable="false"
        android:paddingTop="@dimen/detalle_contacto"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/MyHintStyle">
        <EditText
            android:id="@+id/etNombre"
            android:text="@string/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lines="1"
            android:maxLines="1"
            android:inputType="text"
            android:theme="@style/MyEditText"
            android:hint="@string/nLabel"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/MyHintStyle">

        <EditText
            android:id="@+id/etEmail"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditText"
            android:hint="@string/eLabel"
            android:focusable="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/MyHintStyle">
        <EditText
            android:id="@+id/etMensaje"
            android:text="@string/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:lines="4"
            android:maxLines="10"
            android:inputType="textMultiLine"
            android:theme="@style/MyEditText"
            android:hint="@string/mLabel"
            tools:ignore="Autofill"
            android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        />
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="generarArchivo"
        />
    <Button
        android:id="@+id/btnGuardarPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_preferencia"
        android:onClick="guardarPref"
        />
    <Button
        android:id="@+id/btnMostrarPref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_preferencia"
        android:onClick="mostrarPref"
        />
    <!--  dummy text -->
    <TextView
        android:id="@+id/tvPreferenciaCompartida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:enabled="false"
        />
</LinearLayout>