<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/imgFoto"
            android:src="@drawable/catty2"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <ImageButton
                android:id="@+id/btnLike"
                android:layout_width="@dimen/like_width"
                android:layout_height="@dimen/like_height"
                android:background="@mipmap/ic_like"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                >
                <EditText
                    android:id="@+id/etNombreCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mascota1"
                    android:textSize="@dimen/nombre_cardview"
                    android:focusable="false"
                    android:textStyle="bold"
                    />
                <EditText
                    android:id="@+id/etTelefonoCV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono"
                    android:focusable="false"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plikes"
                android:focusable="false"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/nombre_cardview"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>